tests/invalid/Parsing_Invalid_5.whiley
function f(int x) -> (int r):
    int x = x
    return x